Update Discord links

--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ disableKinds = ["taxonomy", "term"]
     github = "https://github.com/newwayland"
     reddit = "https://www.reddit.com/user/aldursys"
     email = "modernmoneymatters@protonmail.com"
-    discord = "https://discord.gg/ESGqEsv"
+    discord = "https://discord.gg/JN6HKUd"
     shareGooglePlus = false
     shareLinkedIn = true
 
