--- a/config.yml
+++ b/config.yml
@@ -3,11 +3,21 @@ title: New Wayland
 theme: PaperMod
 languageCode: en-gb
 copyright: New Wayland
-pygmentsUseClasses: true
-pygmentsCodeFences: true
-disableKinds:
-  - taxonomy
-  - term
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
+menu:
+    main:
+        - identifier: search
+          name: Search
+          url: /search/
+          weight: 10
+        - identifier: tags
+          name: Tags
+          url: /tags/
+          weight: 20
 params:
   env: production
   socialIcons: # optional
