--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ baseURL: 'https://new-wayland.com/blog/'
 title: New Wayland
 languageCode: en-gb
 theme: github.com/adityatelange/hugo-PaperMod
-copyright: New Wayland
+copyright: "&copy; Neil Wilson. This blog is openly licensed via [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
 outputs:
   home:
     - HTML
